# data-builder

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  init.sh  skills-lock.json
backend/: alembic.ini  pyproject.toml  test.db
backend/alembic/versions/: 201bedf4e8a5_add_celery_task_id_to_pipeline_runs.py  48eac71e7c56_cdc_v2_foundation.py  92933928b7a8_add_cdc_jobs_and_cdc_sync_logs_tables.py  d06c7f9c2105_add_pipeline_runs_table.py  d3564c305716_initial_tables.py
backend/app/: celery_app.py  config.py  database.py  main.py  tasks.py
backend/app/connectors/: __init__.py  base.py  databricks.py  postgres.py  registry.py
backend/app/core/: encryption.py  exceptions.py
backend/app/models/: __init__.py  base.py  cdc_job.py  connector.py  pipeline.py  pipeline_run.py
backend/app/routers/: catalog.py  cdc.py  connectors.py  health.py  monitoring.py  pipelines.py
backend/app/schemas/: catalog.py  cdc.py  connector.py  monitoring.py  pipeline.py  pipeline_run.py
backend/app/services/: catalog_service.py  cdc_events.py  cdc_service.py  (+7 more)
backend/tests/: conftest.py  test_catalog.py  test_catalog_validation.py  test_cdc.py  test_cdc_control_endpoints.py  test_cdc_event_schema.py  test_cdc_migration.py  test_cdc_scheduler_orphan.py  test_cdc_service.py  test_cdc_watcher.py  test_celery_integration.py  test_connectors.py  test_encryption.py  test_execution_engine.py  test_health.py  test_notification_service.py  test_pipelines.py  test_postgres_connector.py  test_run_service.py  test_runs.py  test_scheduler_service.py  test_validation.py
(+68 files in other folders)
