[project]
name = "data-builder-backend"
version = "0.1.0"
description = "Data Builder - Visual ETL Pipeline Platform"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.13.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "cryptography>=42.0.0",
    "redis>=5.0.0",
    "boto3>=1.34.0",
    "databricks-sql-connector>=3.0.0",
    "croniter>=2.0.0",
    "eval-type-backport>=0.2.0;python_version<'3.10'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
